--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -44,6 +44,14 @@
               "extractLicenses": true,
               "vendorChunk": false,
               "buildOptimizer": true
+            },
+            "api": {
+              "fileReplacements": [
+                {
+                  "replace" : "src/environments/environment.ts",
+                  "with": "src/environments/environment.api.ts"
+                }
+              ]
             }
           }
         },
@@ -55,6 +63,9 @@
           "configurations": {
             "production": {
               "browserTarget": "frontend:build:production"
+            },
+            "api": {
+              "browserTarget": "frontend:build:api"
             }
           }
         },
