--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,19 @@
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.26",
+    "ts-helpers": "^1.1.1",
+    "async": "^1.5.0",
+    "body-parser": "^1.14.1",
+    "cors": "^2.7.1",
+    "express": "~4.13.3",
+    "lodash": "^4.11.1",
+    "method-override": "^2.3.5",
+    "mime": "^1.3.4",
+    "mongoose": "^4.2.7",
+    "morgan": "^1.7.0",
+    "socket.io": "^1.4.5",
+    "socket.io-client": "^1.4.5"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^6.0.3",
