--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node app.js",
     "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
+    "test": "sng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor"
   },
